fix overflow x

--- a/merged projects/css/aanvraag.scss
+++ b/merged projects/css/aanvraag.scss
@@ -3,6 +3,7 @@ $color_2: #fff;
 $font-family_1: Arial, sans-serif;
 
 body {
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: $font-family_1;
@@ -15,6 +16,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 h1 {
