--- a/merged projects/css/about.scss
+++ b/merged projects/css/about.scss
@@ -3,6 +3,7 @@ $color_2: #fff;
 $font-family_1: Arial, sans-serif;
 
 body {
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: $font-family_1;
@@ -13,6 +14,7 @@ body {
     font-family: $font-family_1;
     background-color: #f8f8f8;
     color: $color_1;
+    overflow-x: hidden;
 }
 
 h1 {
