--- a/merged projects/css/contact.scss
+++ b/merged projects/css/contact.scss
@@ -9,11 +9,13 @@ a {
 }
 
 body {
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: $font-family_1;
     background-color: #f8f8f8;
     color: $color_1;
+    overflow-x: hidden;
 }
 
 h1 {
